guestbook/guestbook-ui-ingress-rule.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - guestbook.gridlan.com
    secretName: gridlan-com
  rules:
  - host: guestbook.gridlan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: guestbook-ui
          servicePort: 80
